--- a/pizza-time/src/App.css
+++ b/pizza-time/src/App.css
@@ -19,8 +19,32 @@
   color: white;
 }
 
+button:focus {
+  outline: none;
+}
+
+button:active {
+  outline: none;
+}
+
 .App-link {
   color: #61dafb;
+}
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: #000;
+  -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 .react-calendar {
