add margin to modal allInvited friends div

--- a/pizza-time/src/App.css
+++ b/pizza-time/src/App.css
@@ -111,6 +111,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-right: 25px;
   }
   .friend img {
     height: auto;
