--- a/pizza-time/src/App.css
+++ b/pizza-time/src/App.css
@@ -227,3 +227,8 @@ div.gm-style-iw.gm-style-iw-c {
   width: 40px;
   height: 40px;
 }
+
+.active-location {
+  border: 1px solid orange !important;
+  border-radius: 3px;
+}
