--- a/pizza-time/src/App.css
+++ b/pizza-time/src/App.css
@@ -33,7 +33,7 @@ button:active {
 
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover,
@@ -187,12 +187,10 @@ ol.carousel-indicators li {
   border: 1px solid red;
 }
 
-<<<<<<< HEAD
 .carousel-control-prev, .carousel-control-next {
   display: none;
 }
 
-=======
 
 #loading-pizza {
   animation: loading-spin infinite 2s linear;
@@ -207,7 +205,6 @@ ol.carousel-indicators li {
     transform: rotate(360deg);
   }
 }
->>>>>>> 5c50945e32e50a3553c004a6950938d0d307a175
 .missing {
   margin: 25px auto 30px;
 }
@@ -287,4 +284,9 @@ div.gm-style-iw.gm-style-iw-c {
 .active-location {
   border: 1px solid orange !important;
   border-radius: 3px;
+}
+
+
+.activeInvite {
+  border: 3px solid black;
 }
